# wasmiot-orchestrator-webgui

./: .env  .gitignore  Dockerfile  README.md  build-npm-dev.sh  build-npm.sh  build-rust.sh  compose-js.yml  compose-rs.yml  compose.yaml  compose.yml  endpoints.json  js.Dockerfile  pyproject.toml  rs.Dockerfile  start-docker-js.sh  start-docker-rs.sh  start-npm-dev.sh  start-npm-serve.sh  start-rs.sh  start.sh
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
app/: app.py
backend/: package-lock.json  package.json  server.js
frontend/: package-lock.json  package.json
frontend-server/: Cargo.toml
frontend-server/src/: main.rs
frontend/src/: App.js  index.css  index.js  utils.js
frontend/src/components/: MindMap.js  MindMapEdge.js  MindMapNode.js  _index.css  backgroundUpdater.js  deleteAllDevicesButton.js  deleteAllManifestsButton.js  deleteAllModulesButton.js  deployment.js  deviceList.js  deviceMap.js  execution.js  floatingConnectionLine.js  floatingEdge.js  manifestCreation.js  manifestList.js  manifestUpdate.js  moduleCreation.js  moduleDescription.js  moduleList.js  moduleListItem.js  nodeWithModal.js  opacitySlider.js  resetDeviceDiscoveryButton.js  store.js  zoneInterface.js
