[tool.poetry]
name = "wasmiot-orchestrator-webgui"
version = "0.1.0"
description = "User interface for wasmiot-orchestrator"
authors = ["aaalalpe"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.31.0"
gradio = "^4.44.1"
pandas = "^2.2.3"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
